--- a/src/index.html
+++ b/src/index.html
@@ -19,19 +19,21 @@
     <main class="content">
       <section class="profile">
         <div class="profile__info">
+          <a class="profile__avatar">
           <img
-            src="<%=require('../src/image/Jak.jpg')%>"
-            alt="Жак-Ив Кусто"
-            class="profile__avatar"
+            src="/"
+            href="#" alt="Фотография пользователя"
+            class="profile__image"
           />
+        </a>
           <div class="profile__title">
-            <h1 class="profile__name">Жак-Ив Кусто</h1>
+            <h1 class="profile__name"></h1>
             <button
               type="button"
               class="profile__edit-button"
               aria-label="Изменить"
             ></button>
-            <p class="profile__profession">Исследователь океана</p>
+            <p class="profile__profession"></p>
           </div>
         </div>
         <button
@@ -144,6 +146,15 @@
       </div>
     </div>
 
+    <div class="popup popup_card-delete">
+      <div class="popup__container">
+        <button class="popup__close-button" type="button"></button>
+        <h2 class="popup__title popup__title_delete">Вы уверены?</h2>
+        <button class="popup__save-button popup__save-button_disabled" type="button">Да</button>
+      </div>
+    </div>
+
+
     <div class="popup popup_preview-image">
       <div class="popup__container-image">
         <button
@@ -153,6 +164,27 @@
         ></button>
         <img class="popup__image" src="#" alt="Фотография" />
         <h2 class="popup__image-text"></h2>
+      </div>
+    </div>
+
+    <div class="popup popup__avatar-form">
+      <div class="popup__container">
+        <button class="popup__close-button" type="button"></button>
+        <h2 class="popup__title popup__title_type-avatar">Обновить аватар</h2>
+        <form class="popup__form popup__avatar-form" name="newUser" novalidate>
+          <label class="popup__field">
+            <input 
+            required
+            class="popup__input" 
+            type="url" 
+            id="avatar-link" 
+            name="avatar-link"  
+            placeholder="Ссылка на новый аватар"
+            >
+            <span class="popup__error" id="avatar-link-error"></span>
+          </label>
+          <button class="popup__save-button" type="submit" aria-label="Сохранить">Сохранить</button>
+        </form>
       </div>
     </div>
 
@@ -166,11 +198,14 @@
         <img class="card__image" src="#" alt="Фотография" />
         <div class="card__caption">
           <h2 class="card__title"></h2>
+          <div class="card__heart-container">
           <button
             class="card__heart"
             type="button"
             aria-label="Нравится"
           ></button>
+          <p class="card__heart-counter"></p>
+        </div>
         </div>
       </li>
     </template>
