--- a/src/index.html
+++ b/src/index.html
@@ -178,7 +178,7 @@
             class="popup__input" 
             type="url" 
             id="avatar-link" 
-            name="avatar-link"  
+            name="link"  
             placeholder="Ссылка на новый аватар"
             >
             <span class="popup__error" id="avatar-link-error"></span>
