--- a/src/index.html
+++ b/src/index.html
@@ -175,11 +175,11 @@
       </div>
     </div>
 
-    <div class="popup popup__avatar-form">
+    <div class="popup popup_form_avatar">
       <div class="popup__container">
         <button class="popup__close-button" type="button"></button>
         <h2 class="popup__title popup__title_type-avatar">Обновить аватар</h2>
-        <form class="popup__form popup__avatar-form" name="newUser" novalidate>
+        <form class="popup__form popup_form_avatar" name="newUser" novalidate>
           <label class="popup__field">
             <input
               required
