--- a/src/index.html
+++ b/src/index.html
@@ -179,7 +179,7 @@
       <div class="popup__container">
         <button class="popup__close-button" type="button"></button>
         <h2 class="popup__title popup__title_type-avatar">Обновить аватар</h2>
-        <form class="popup__form popup_form_avatar" name="newUser" novalidate>
+        <form class="popup__form popup__form_avatar" name="newUser" novalidate>
           <label class="popup__field">
             <input
               required
